20110406 machines/specplus3.[ch],menu.[ch],menu_data.dat,
         peripherals/{disk/{beta,opus,plusd},if1}.[ch]: split saving out of
         menu_media_eject() and the device-specific eject functions (Stuart).
20110406 peripherals/disk/beta.c: enable Beta 128 interface for
         PERIPH_TYPE_BETA128_PENTAGON and PERIPH_TYPE_BETA128_PENTAGON_LATE too
         (ketmar).
20110407 peripherals/disk/beta.c,settings.dat,ui/options.dat: support the Beta
         interface setting to not auto-boot the interface on 48K machines 
         (ketmar).
20110407 peripherals/disk/beta.c: store Beta 128 autoboot setting in snapshots
         (Fred).
20110408 settings.dat: fix name of separation option in config file (Stuart).
20110412 configure.in,screenshot.c: libpng 1.5.X no longer internally includes
         the zlib.h header file, so applications that refer to Z_ constants need
         to include it explicitly (patch #3283820) (Sergio Baldovi).
20110412 ui/win32/win32ui.c: improve Win32 UI behaviour when cancelling
         selection dialogs (patch #3283822) (Sergio Baldovi).
20110413 menu_data.dat: remove leading zeroes in eject action values (Stuart).
20110414 fuse.c,machines/machines_periph.c,man/fuse.1,menu.[ch],menu_data.dat,
         periph.h,peripherals/disk/{Makefile.am,disciple.[ch]},settings.dat,
         tape.c,ui.c,ui/{options.dat,ui.h},z80/{coretest.c,z80_checks.h,
         z80_ops.c}: DISCiPLE emulation (Stuart).
20110414 disciple.c: avoid C++/C99 comments (Stuart).
20110415 ui/win32/win32ui.c: fix the disabling of menu entries below a
         separator, e.g., /File/Movie/Stop Movie Recording (patch #3286195)
         (Sergio Baldovi).
20110425 ui/gtk/{gtkdisplay.c,gtkinternals.h,statusbar.c}: fix warnings.
20110430 configure.in: fix complilation --without-gtk --with-x with libpng 1.4
         installed as libpng14 (thanks, rkd77) (Fred).
20110430 ui/xlib/xjoystick.c: fix complilation --without-gtk --with-x with
         joystick configured (rkd77).