@@ -3616,3 +3616,6 @@
          installed as libpng14 (thanks, rkd77) (Fred).
 20110430 ui/xlib/xjoystick.c: fix complilation --without-gtk --with-x with
          joystick configured (rkd77).
+20110430 ui/win32/{statusbar.c,win32display.c,win32internals.h}: add machine
+         name into the status bar the same as the GTK UI. Fix a few compiler
+         warnings (patch #3294566) (Sergio Baldovi).
